@@ -1,3 +1,10 @@
+2008-03-27 Martin Schaaf <mascha@ma-scha.de>
+
+	* src/MapList.py
+	o fix renaming of thought
+	* src/Browser.py
+	o raise a AttributeError instead of a deprecated String
+
 2008-03-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/MMapArea.py
